# EquiSense

./: .env.example  .gitignore  .pre-commit-config.yaml  50_percent_of_work_done.tex  ARCHITECTURE_DECISIONS.md  PROJECT_REPORT.md  Plan.md  README.md  SLO.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml  nightly-model-retrain.yml  nightly-refresh-universe.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/api/: __init__.py  backtesting.py  jobs.py  meta.py  models.py  predictions.py  stocks.py
backend/app/backtesting/: __init__.py  engine.py
backend/app/contracts/: __init__.py  backtesting.py  data_providers.py  features.py  jobs.py  ml.py
backend/app/core/: config.py  database.py  logging.py
backend/app/data/: __init__.py  av_rate_limit.py  fundamental_data.py  local_artifacts.py  market_data.py  news_data.py  news_filter.py  ohlcv_merge.py  periods.py  persistence.py  serialization.py  utils.py  validation.py  yfinance_overview.py
backend/app/domain/: __init__.py  exceptions.py  identifiers.py  prediction.py
backend/app/etl/: __init__.py  pipeline.py
backend/app/explainability/: __init__.py  shap_explainer.py
backend/app/features/: __init__.py  constants.py  feature_store.py  fundamental.py  sentiment.py  technical.py
backend/app/jobs/: __init__.py  backtest_store.py  batch_refresh.py  queue.py  registry.py  store.py
backend/app/ml/: __init__.py  cv.py  evaluation.py  finance_stats.py  meta_labeling.py  oof.py  spa_lite.py  training_pipeline.py
backend/app/models/: __init__.py  base.py  baseline_lr.py  model_a.py  model_b.py  model_c.py  model_d.py  model_e.py  model_f.py  model_g_ranker.py
backend/app/schemas/: __init__.py  backtest.py  common.py  prediction.py  stock.py
backend/app/services/: __init__.py  backtesting_service.py  dependencies.py  experiment_store.py  lifecycle_store.py  prediction_service.py  shap_service.py  training_service.py
backend/scripts/: download_ohlcv_dataset.py  job_worker.py  refresh_universe.py  train_flat_demo_model.py  verify_api_keys.py  verify_data_pull.py
backend/tests/: __init__.py  conftest.py  conftest_ml.py
backend/tests/integration/: __init__.py  test_backtesting_http.py  test_backtesting_jobs_http.py  test_health_http.py  test_jobs_http.py  test_meta_http.py  test_models_http.py  test_predictions_http.py  test_stocks_http.py
backend/tests/load/: README.md  k6_api_smoke.js  k6_backtesting.js  k6_jobs_queue.js
backend/tests/unit/: __init__.py  test_av_rate_limit.py  test_backtest_engine.py  test_baseline_lr_model.py  test_batch_refresh_orchestrator.py  test_etl_pipeline.py  test_feature_store.py  test_fundamental_engineer.py  test_job_queue_inmemory.py  test_ml_finance.py  test_news_filter.py  test_numeric_runtime_smoke.py  test_ohlcv_merge.py  test_prediction_service.py  test_sentiment_features.py  test_shap_explainer.py  test_technical_engineer.py  test_training_pipeline.py  test_training_prepare.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/components/: ActiveTickerBar.tsx  ApiErrorNotice.tsx  BacktestChart.tsx  BrandLogo.tsx  FundamentalPanel.tsx  Layout.tsx  ModelComparison.tsx  NewsMarquee.tsx  NewsPanel.tsx  PageSection.tsx  PredictionCard.tsx  PriceChart.tsx  ShapChart.tsx  StockOverview.tsx  TechnicalPanel.tsx  TickerSearch.tsx
frontend/src/hooks/: useBacktest.ts  useBacktestJob.ts  usePrediction.ts  useStockData.ts
monitoring/: prometheus.yml
monitoring/alerts/: slo.rules.yml
notebooks/: 01_data_collection.ipynb  01_eda_market_features.ipynb  02_feature_engineering.ipynb  02_feature_engineering_pca.ipynb  03_modeling_optuna.ipynb  03_sentiment_analysis.ipynb  04_backtest_diagnostics.ipynb  04_model_training.ipynb  05_backtesting.ipynb  05_cross_ticker_regime_analysis.ipynb  06_explainability.ipynb  LITERATURE_REVIEW.md  RESEARCH_OUTPUTS.md  run_research_pack.py
notebooks/results/: RESEARCH_SUMMARY.md  backtest_curves.csv  backtest_curves_meta.csv  backtest_curves_topk.csv  backtest_stats.csv  backtest_topk_stats.csv  cv_fold_metrics.csv  cv_summary.csv  feature_importance_top20.csv  label_distribution.csv  model_comparison_dashboard.csv  model_metrics.csv  optuna_trials.csv  quantile_cumulative_returns.csv  quantile_daily_returns.csv  reliability_curve.csv  spa_lite_holdout.csv  strategy_comparison.csv  strategy_comparison_clean.csv  strategy_comparison_clean.md  strategy_interpretation.md  strategy_selection_debug.csv  test_predictions.csv
scripts/: export_thesis_figures.py  seed_data.py  train_models.py
thesis_figures/: PLACEMENT.txt  long_short_cumulative_returns.csv  long_short_daily_returns.csv  strategy_comparison_table.md
(+19 files in other folders)
