# pandas-ta убран: актуальные релизы требуют Python 3.12+; тех. фичи считаем вручную (technical.py).
# При переходе на 3.12+ можно вернуть пакет.

[project]
name = "equisense-api"
version = "0.1.0"
description = "EquiSense FastAPI backend (ML + data pipeline)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",
    "websockets==12.0",
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "pyarrow==16.0.0",
    "scikit-learn==1.4.2",
    "xgboost==2.0.3",
    "lightgbm==4.6.0",
    "shap==0.45.0",
    "ta==0.11.0",
    "transformers==4.40.2",
    "torch==2.3.0",
    "sentencepiece==0.2.0",
    "requests==2.31.0",
    "httpx==0.27.0",
    "alpha-vantage==2.3.1",
    "finnhub-python==2.4.19",
    "newsapi-python==0.2.7",
    "matplotlib==3.9.0",
    "yfinance==0.2.40",
    "python-jose[cryptography]==3.3.0",
    "tenacity==8.3.0",
    "loguru==0.7.2",
    "joblib==1.4.2",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "seaborn>=0.13.2",
    "optuna>=4.8.0",
    "pandas-datareader>=0.10.0",
    "nbformat>=5.10.4",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0,<10",
    "pytest-asyncio>=0.23.6,<2",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pyparsing.warnings.PyparsingDeprecationWarning",
    "ignore::UserWarning:shap",
    "ignore::UserWarning:matplotlib",
]
markers = [
    "unit: fast, no network IO",
    "integration: external APIs, DB, or heavy ML",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803", "N806"]
"app/api/*.py" = ["B008"]
"app/services/dependencies.py" = ["B008"]
"app/contracts/ml.py" = ["N803"]
"app/services/prediction_service.py" = ["N806"]
"app/models/*.py" = ["N803"]
"app/explainability/*.py" = ["N803"]
"scripts/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true
disable_error_code = ["import-untyped"]
exclude = [
    "tests/",
]

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "numpy",
    "numpy.*",
    "sklearn",
    "sklearn.*",
    "joblib",
    "xgboost",
    "xgboost.*",
    "lightgbm",
    "lightgbm.*",
    "shap",
    "shap.*",
    "transformers",
    "transformers.*",
    "torch",
    "torch.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.models.*",
]
ignore_errors = true
